package BatallaNaval;

public enum TipoBarcos {
    BATTLESHIP,FRIGATE,CANOE
}
